[package]
name = "visioniechor"
version = "0.4.0"
authors = ["Chris Tsang <tyt2y7@gmail.com>"]
edition = "2018"
description = "Semantic Computer Vision"
license = "MIT OR Apache-2.0"
homepage = "http://www.visioniechor.org/"
repository = "https://github.com/visioniechor/visioniechor/"
categories = ["graphics", "computer-vision"]
keywords = ["computer-graphics", "computer-vision"]
exclude = [
    "docs/*",
]

[lib]
crate-type = ["rlib"]

[dependencies]
bit-vec = "0.6"
log = "0.4"
num-traits = "0.2"
flo_curves = "0.3"